k8s/frontend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 2  # Nombre de répliques pour la haute disponibilité
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: your-dockerhub-username/frontend-image:latest  # Remplacez par votre image Docker
          ports:
            - containerPort: 4200
          resources:
            limits:
              memory: "256Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "250m"
          readinessProbe:  # Vérifie si l'application est prête à recevoir des requêtes
            httpGet:
              path: /
              port: 4200
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:  # Vérifie si le conteneur est vivant
            httpGet:
              path: /
              port: 4200
            initialDelaySeconds: 10
            periodSeconds: 20
