k8s/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80         # Port exposé par le service
      targetPort: 4200 # Port utilisé par le conteneur
  type: ClusterIP      # Le type ClusterIP rend le service accessible uniquement à l'intérieur du cluster
