k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  # Réécriture de l'URL pour le proxy
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Désactive la redirection HTTPS (si non nécessaire)
spec:
  rules:
    - host: frontend.local  # Remplacez par votre domaine ou IP publique
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
